<resources>
    <string name="google_geo_api_key">AIzaSyAEK_qwu1Ph_2Le_jYahcqjbRwfP3wjaGg</string>
    <string name="app_name">Education</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_profile">Profile</string>
    <string name="text_bio_data">Bio Data</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_b_date">Birth Date</string>
    <string name="text_rollno">Roll Number</string>
    <string name="text_standard">Standard</string>
    <string name="text_branch">Branch</string>
    <string name="text_semester">Semester</string>
    <string name="text_division">Division</string>
    <string name="text_contact_details">Contact Details</string>
    <string name="text_address">Address</string>
    <string name="text_parent_contact">Parent Contact</string>
    <string name="text_city">City</string>
    <string name="text_batch">Batch</string>
    <!-- Strings related to Menu -->
    <string name="menu_profile">Profile</string>
    <string name="menu_attendence">Attendence</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_result">Result</string>
    <string name="menu_teacher">Teacher</string>
    <string name="menu_growth">Growth</string>
    <string name="menu_holiday">Holiday</string>
    <string name="menu_news">News &amp; Event</string>
    <string name="menu_notice">Notice</string>
    <string name="title_activity_attendence">Attendence</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_message">Message</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_note"><b>Note</b> </string>
    <string name="action_sign_in_note_text">student login provided by school to authanticated student.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_exam">Exams</string>
    <string name="title_activity_teacher">Teachers</string>
    <string name="title_activity_growth">Growth</string>
    <string name="title_activity_holidays">Holidays</string>
    <string name="title_activity_news">News And Events</string>
    <string name="title_activity_notice">Notice</string>
    <string name="title_activity_enquiry">Enquiry</string>

    <string name="prompt_subject">Subject</string>
    <string name="title_activity_result_list">Result Details</string>
    <string name="title_activity_top_student">Top Student</string>
    <string name="main_activity_logout">Logout Sucessfull</string>
    <string name="permission_required">App required some permission please enable it</string>
    <string name="fire">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="attendence_show">SHOW</string>
    <string name="enquiry_add_message"> + New message</string>
    <string name="content_result_list_student_name">Student Name : </string>
    <string name="content_result_list_exam_title">Exam Title</string>
    <string name="content_result_list_date">01/12/2016</string>
    <string name="content_result_list_subject">Subject</string>
    <string name="content_result_list_total_marks">Total Marks</string>
    <string name="content_result_list_marks">Marks</string>
    <string name="content_result_list_obtain">Obtain</string>
    <string name="content_result_list_perstage">50%</string>
    <string name="dialog_attend_note_attendance_note">Attendance Note</string>
    <string name="dialog_enquiry_message">Enquiry Message</string>
    <string name="row_for_event_title">Title</string>
    <string name="row_for_event_start_date">Start Date</string>
    <string name="row_for_event_end_date">End Date</string>
    <string name="row_for_event_new_text">New Text</string>
</resources>
