<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/subject"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/content_result_list_subject"/>
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/content_result_list_marks"
        android:id="@+id/total_marks"/>
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/content_result_list_obtain"
        android:id="@+id/obtain_marks"/>
</LinearLayout>
