<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.education.ResultListActivity"
    tools:showIn="@layout/activity_result_list"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_student_name"
            android:textColor="#fff"/>

    <TextView
        android:id="@+id/stud_name"
        android:textColor="#e5e5e5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Xyz Student"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/exam_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_exam_title"
            android:textColor="#fff"/>
        <TextView
            android:id="@+id/exam_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_date"
            android:textColor="#e5e5e5"/>


    </LinearLayout>
                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:textColor="#e5e5e5"
                    android:textStyle="bold"
                    android:text="@string/content_result_list_perstage" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#e5e5e5">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_subject"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_marks"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_obtain"/>

    </LinearLayout>

<ListView
    android:id="@+id/listview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"></ListView>
</LinearLayout>
