<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result"
        android:background="@color/color_6"
        android:textColor="#ffffff"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#e5e5e5">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_subject"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_marks"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/content_result_list_obtain"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView3" />
</LinearLayout>
